--- a/03_primjeri.ipynb
+++ b/03_primjeri.ipynb
@@ -266,6 +266,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(generator))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -394,6 +411,23 @@
     "nums = [1, 2, 3, 4, 5, 6]\n",
     "\n",
     "for even in even_nums(nums): print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(even_nums))"
    ]
   },
   {
